Portolio page, init

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,44 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="ruf.org"
+  link="https://ruf.org"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  Built-out React components for Gutenberg, animated homepage header, user relations to college campuses, nav, social media integration, etc.
 </ProjectCard>
 <ProjectCard
-  title="Setting  up a yarn Workspace"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  title="RUF Intranet"
+  link="https://portal.ruf.org/"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A robust solution for multi-package repositories.
+  Whole site rebuilt from deprecated classic Google Site to include GDrive integration, Social media feeds, Company Wiki, etc. (More info available upon request)
 </ProjectCard>
 <ProjectCard
-  title="Adding a Draft Feature to Gatsby"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Biblit - Bible literature courses online"
+  link="https://biblit.org/"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  A solution with the createSchemaCustomization API.
+  Whole site build with custom design components and animations
 </ProjectCard>
 <ProjectCard
-  title="Theme UI Plugin for Figma"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  title="Bird Loechl McCants & Holliday"
+  link="https://blmhlaw.com/"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  The Theme UI plugin for Figma allows for a workflow where Theme UI is the
-  starting point both for design & development.
+  Whole site build for law firm with use of CSS Flexbox & CSS Grid, collaboration with photographer and designer, etc.
+</ProjectCard>
+<ProjectCard
+  title="Four:One Journey"
+  link="https://fouronejourney.org/"
+  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
+>
+  Whole site build for Christian counseling in the church, education dashboard & hidden content forthcoming
+</ProjectCard>
+<ProjectCard
+  title="Gait: Online Christian Counseling"
+  link="https://gait.net/"
+  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
+>
+  Whole site build for professional Christian counseling, integrated Stripe E-Commerce
 </ProjectCard>
