--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,8 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> Joe is a creator.
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+As a Full-Stack Web Developer he aims to traverse a broad scheme of technical feats in order to create a simple, enjoyable, and intuitive website experience. He likes to remind people that he is a “go to the sources” kind of guy; besides digital languages, he loves delving into Biblical Greek and Hebrew, too.
+
+<InsertScript />
+ 
